Added Syntax for Vector Commitment Scheme

--- a/2022-941/macros.tex
+++ b/2022-941/macros.tex
@@ -11,3 +11,10 @@
 
 \newcommand{\kmisis}{k\textsf{-M-ISIS}}
 \newcommand{\krisis}{k\textsf{-R-ISIS}}
+\newcommand{\Setup}{\textsf{Setup}}
+\newcommand{\Com}{\textsf{Com}}
+\newcommand{\Open}{\textsf{Open}}
+\newcommand{\PreVerify}{\textsf{PreVerify}}
+\newcommand{\Verify}{\textsf{Verify}}
+\newcommand{\pp}{\textsf{pp}}
+\newcommand{\aux}{\textsf{aux}}
