Added Security Requirements

--- a/2022-941/macros.tex
+++ b/2022-941/macros.tex
@@ -18,3 +18,5 @@
 \newcommand{\Verify}{\textsf{Verify}}
 \newcommand{\pp}{\textsf{pp}}
 \newcommand{\aux}{\textsf{aux}}
+\newcommand{\adversary}{\mathcal{A}}
+\newcommand{\extractor}{\mathcal{E}_\mathcal{A}}
