Complete new assumptions section

--- a/2022-941/macros.tex
+++ b/2022-941/macros.tex
@@ -20,3 +20,5 @@
 \newcommand{\aux}{\textsf{aux}}
 \newcommand{\adversary}{\mathcal{A}}
 \newcommand{\extractor}{\mathcal{E}_\mathcal{A}}
+\newcommand{\isequal}{\stackrel{?}{=}}
+\newcommand{\uniformly}{\stackrel{\$}{\leftarrow}}
