Done VCS and zkSNARK for PolySAT

--- a/2022-941/macros.tex
+++ b/2022-941/macros.tex
@@ -9,6 +9,12 @@
 	\end{frame}
 }
 
+\newcommand{\thankyouframe}{\begin{frame}{}
+		\begin{center}
+			{\fontsize{20}{20}\selectfont Thank You!}
+		\end{center}
+\end{frame}}
+
 \newcommand{\kmisis}{k\textsf{-M-ISIS}}
 \newcommand{\krisis}{k\textsf{-R-ISIS}}
 \newcommand{\Setup}{\textsf{Setup}}
@@ -22,3 +28,4 @@
 \newcommand{\extractor}{\mathcal{E}_\mathcal{A}}
 \newcommand{\isequal}{\stackrel{?}{=}}
 \newcommand{\uniformly}{\stackrel{\$}{\leftarrow}}
+\newcommand{\explain}[2]{\underbrace{#1}_{\text{#2}}}
