--- a/2022-941/main.tex
+++ b/2022-941/main.tex
@@ -34,9 +34,11 @@
 	\section{zkSNARKs for PolySAT}
 	\input{section_zksnarks_for_polysat.tex}
 	
+	\thankyouframe
+	
 	\begin{frame}[allowframebreaks]{References}
 		\setbeamertemplate{bibliography item}[text]
-		\bibliographystyle{alpha}
+		\bibliographystyle{abbrv}
 		\bibliography{refs.bib}
 		
 	\end{frame}
