--- a/2022-941/main.tex
+++ b/2022-941/main.tex
@@ -38,7 +38,7 @@
 	
 	\begin{frame}[allowframebreaks]{References}
 		\setbeamertemplate{bibliography item}[text]
-		\bibliographystyle{abbrv}
+		\bibliographystyle{alpha}
 		\bibliography{refs.bib}
 		
 	\end{frame}
