--- a/2022-941/refs.bib
+++ b/2022-941/refs.bib
@@ -71,3 +71,73 @@
 	biburl    = {https://dblp.org/rec/conf/crypto/LaiM19.bib},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{GennaroMNO18,
+	author    = {Rosario Gennaro and
+	Michele Minelli and
+	Anca Nitulescu and
+	Michele Orr{\`{u}}},
+	title     = {Lattice-Based zk-SNARKs from Square Span Programs},
+	booktitle = {ACM CCS 2018},
+	pages     = {556--573},
+	publisher = {{ACM}},
+	year      = {2018},
+	url       = {https://doi.org/10.1145/3243734.3243845},
+	doi       = {10.1145/3243734.3243845},
+	timestamp = {Tue, 10 Nov 2020 20:00:53 +0100},
+	biburl    = {https://dblp.org/rec/conf/ccs/GennaroMNO18.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{IshaiSW21,
+	author    = {Yuval Ishai and
+	Hang Su and
+	David J. Wu},
+	title     = {Shorter and Faster Post-Quantum Designated-Verifier zkSNARKs from
+	Lattices},
+	booktitle = {ACM CCS 2021},
+	publisher = {{ACM}},
+	year      = {2021},
+	url       = {https://doi.org/10.1145/3460120.3484572},
+	doi       = {10.1145/3460120.3484572},
+	timestamp = {Sun, 11 Sep 2022 16:09:13 +0200},
+	biburl    = {https://dblp.org/rec/conf/ccs/IshaiSW21.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{AttemaCK21,
+	author    = {Thomas Attema and
+	Ronald Cramer and
+	Lisa Kohl},
+	title     = {A Compressed {\textdollar}{\textbackslash}varSigma {\textdollar}-Protocol
+	Theory for Lattices},
+	booktitle = {CRYPTO 2021},
+	series    = {LNCS},
+	volume    = {12826},
+	pages     = {549--579},
+	publisher = {Springer},
+	year      = {2021},
+	url       = {https://doi.org/10.1007/978-3-030-84245-1\_19},
+	doi       = {10.1007/978-3-030-84245-1\_19},
+	timestamp = {Mon, 16 Aug 2021 09:08:14 +0200},
+	biburl    = {https://dblp.org/rec/conf/crypto/AttemaCK21.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{BootleCS21,
+	author    = {Jonathan Bootle and
+	Alessandro Chiesa and
+	Katerina Sotiraki},
+	title     = {Sumcheck Arguments and Their Applications},
+	booktitle = {CRYPTO 2021},
+	series    = {LNCS},
+	volume    = {12825},
+	pages     = {742--773},
+	publisher = {Springer},
+	year      = {2021},
+	url       = {https://doi.org/10.1007/978-3-030-84242-0\_26},
+	doi       = {10.1007/978-3-030-84242-0\_26},
+	timestamp = {Sat, 09 Apr 2022 12:33:44 +0200},
+	biburl    = {https://dblp.org/rec/conf/crypto/BootleCS21.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
