fix sigma in bibliography

--- a/2022-941/refs.bib
+++ b/2022-941/refs.bib
@@ -109,7 +109,7 @@
 	author    = {Thomas Attema and
 	Ronald Cramer and
 	Lisa Kohl},
-	title     = {A Compressed {\textdollar}{\textbackslash}varSigma {\textdollar}-Protocol
+	title     = {A Compressed {$\Sigma$}-Protocol
 	Theory for Lattices},
 	booktitle = {CRYPTO 2021},
 	series    = {LNCS},
