Add \pause and fix small errors

--- a/2022-941/section_introduction.tex
+++ b/2022-941/section_introduction.tex
@@ -1,15 +1,16 @@
+% !TeX root = main.tex
 \begin{frame}{Introduction}
-	Lattice-based SNARKs require either 
+	Previous lattice-based SNARKs require either \pause
 	\begin{itemize}
-		\item designated verifiers \cite{GennaroMNO18, IshaiSW21} or 
-		\item linear-time verification \cite{AttemaCK21, BootleCS21}.
+		\item designated verifiers \cite{GennaroMNO18, IshaiSW21} or \pause
+		\item linear-time verification \cite{AttemaCK21, BootleCS21}.\pause
 	\end{itemize}
 
-	Contributions from the paper \cite{AlbrechtCLMT22}:
+	Contributions from the paper \cite{AlbrechtCLMT22}:\pause
 	\begin{itemize}
-		\item Translation technique from pairing-based to lattice-based.
-		\item Vector commitment for constant-degree polynomials.
-		\item New lattice assumptions: $\kmisis$ and $\krisis$, implying post-quantum security.
+		\item Translation technique from pairing-based to lattice-based.\pause
+		\item Vector commitment for constant-degree polynomials.\pause
+		\item New lattice assumptions: $\kmisis$ and $\krisis$, implying post-quantum security.\pause
 		\item New applications: recursive composition, aggregation of GPV signatures and adaptor signatures.
 	\end{itemize}
 \end{frame}
