--- a/2022-941/section_new_lattice_assumptions.tex
+++ b/2022-941/section_new_lattice_assumptions.tex
@@ -1,12 +1,12 @@
 % !TeX root = main.tex
 \begin{frame}{New Lattice Assumptions: $\kmisis$ and $\krisis$}
-	$\mathcal{G}$: set of Laurent monomials, i.e., $g(\mathbf{X}) = \prod_{i\in \mathbb{Z}_w}X_i^{e_i}$.
+	$\mathcal{G}$: set of Laurent monomials, i.e., $g(\mathbf{X}) = \prod_{i\in \mathbb{Z}_w}X_i^{e_i}$.\pause
 	
-	$\mathcal{R}$: $m$-th cyclotomic ring. $\mathcal{R}_q = \mathcal{R}/q\mathcal{R}$.
+	$\mathcal{R}$: $m$-th cyclotomic ring. $\mathcal{R}_q = \mathcal{R}/q\mathcal{R}$.\pause
 	
-	$\mathcal{D}_{g, \mathbf{A}, \mathbf{t}, \mathbf{v}} = \left\{\mathbf{u}_g\in\mathcal{R}^\ell : \mathbf{A}\cdot \mathbf{u}_g = g(\mathbf{v})\cdot\mathbf{t} \mod q, \lVert\mathbf{u}_g\rVert \text{ is small}\right\}$
+	$\mathcal{D}_{g, \mathbf{A}, \mathbf{t}, \mathbf{v}} = \left\{\mathbf{u}_g\in\mathcal{R}^\ell : \mathbf{A}\cdot \mathbf{u}_g = g(\mathbf{v})\cdot\mathbf{t} \mod q, \lVert\mathbf{u}_g\rVert \text{ is small}\right\}$.\pause
 	
-	The following probability is negligible.
+	The following probability is negligible.\pause
 	
 	\begin{equation*}
 		\Pr\left[
@@ -22,7 +22,7 @@
 			\forall g \in \mathcal{G}:\mathbf{u}_g \uniformly\mathcal{D}_{g, \mathbf{A}, \mathbf{t}, \mathbf{v}},\\
 			(s^\star, \mathbf{u}_g^{\star} \leftarrow \adversary(\mathbf{A}, \mathbf{t}, \left\{\mathbf{u}_\mathcal{G}\right\}, \mathbf{v}))
 		\end{split}
-		\right]
+		\right].\pause
 	\end{equation*}
 
 	$\krisis$: Same to $\krisis$ except $\mathbf{A}$ has $1$ row and $\mathcal{T} = \left\{(1, 0, \dots, 0)^\top\right\}$.
