--- a/2022-941/section_technical_overview.tex
+++ b/2022-941/section_technical_overview.tex
@@ -1,22 +1,22 @@
 % !TeX root = main.tex
 \begin{frame}{Vector Commitment Scheme from Pairings}
-	From \cite{AlbrechtCLMT22}, adapted from \cite{CatalanoF13, LibertRY16,LaiM19}:
+	From \cite{AlbrechtCLMT22}, adapted from \cite{CatalanoF13, LibertRY16,LaiM19}:\pause
 	\begin{itemize}
-		\item \textbf{$\pp$:} $[1]_1, [1]_2, ([v_i]_1)_{i\in \mathbb{Z}_w}, ([\overline{v}_j]_2)_{j \in \mathbb{Z}_w}, ([v_i \cdot \overline{v}_j])_{i, j \in \mathbb{Z}_w, i\not=j}, [\overline{v}]_t$ where 
+		\item \textbf{$\pp$:} $[1]_1, [1]_2, ([v_i]_1)_{i\in \mathbb{Z}_w}, ([\overline{v}_j]_2)_{j \in \mathbb{Z}_w}, ([v_i \cdot \overline{v}_j]_2)_{i, j \in \mathbb{Z}_w, i\not=j}, [\overline{v}]_t$ where 
 		\begin{equation*}
 			\overline{v} = \prod_{k \in \mathbb{Z}_w}v_k,\qquad \overline{v}_j = \overline{v}/v_j.
-		\end{equation*}
-		\item \textbf{Commit $\mathbf{x}$:} $[c]_1 := \sum_{i \in \mathbb{Z}_w} x_i \cdot [v_i]_1 = \langle[\mathbf{v}]_1, \mathbf{x}\rangle$.
-		\item \textbf{Open $f$:} $y = \sum_{i \in \mathbb{Z}_w}f_i\cdot x_i,\quad \sum_{i,j \in \mathbb{Z}_w, i\not=j}f_j\cdot x_i\cdot[v_i\cdot\overline{v}_j]_2$.
+		\end{equation*}\pause
+		\item \textbf{Commit $\mathbf{x}$:} $[c]_1 := \sum_{i \in \mathbb{Z}_w} x_i \cdot [v_i]_1 = \langle[\mathbf{v}]_1, \mathbf{x}\rangle$.\pause
+		\item \textbf{Open $f$:} $y = \sum_{i \in \mathbb{Z}_w}f_i\cdot x_i,\quad \sum_{i,j \in \mathbb{Z}_w, i\not=j}f_j\cdot x_i\cdot[v_i\cdot\overline{v}_j]_2$.\pause
 		\item \textbf{Verify $f, y$:} $\langle[1]_1, [u]_2\rangle \isequal \left\langle[c]_1, \sum_{j \in \mathbb{Z}_w}f_j\cdot [\overline{v}_j]_2\right\rangle - y \cdot [\overline{v}]_t$.
 	\end{itemize}
 \end{frame}
-\begin{frame}{Transforming to Lattices}
-	The following computations are in modulo $q$:
+\begin{frame}{Translating to Lattices}
+	The following computations are in modulo $q$:\pause
 	\begin{itemize}
-		\item \textbf{$\pp$:} $\left(\mathbf{a}, \mathbf{v}, (\mathbf{u}_{i,j})_{i,j\in \mathbb{Z}_w, i\not=j}\right)$ s.t. $\mathbf{a}^\top\cdot \mathbf{u}_{i,j} = v_i \cdot v_j^{-1}$.
-		\item \textbf{Commit:} $c = \mathbf{v}^\top\cdot\mathbf{x}$.
-		\item \textbf{Open $f$:} $y = \sum_{i \in \mathbb{Z}_w}f_i\cdot x_i,\quad \mathbf{u}:=\sum_{i,j \in \mathbb{Z}_w, i\not=j}f_i\cdot x_i\cdot \mathbf{u}_{i,j}$.
+		\item \textbf{$\pp$:} $\left(\mathbf{a}, \mathbf{v}, (\mathbf{u}_{i,j})_{i,j\in \mathbb{Z}_w, i\not=j}\right)$ s.t. $\mathbf{a}^\top\cdot \mathbf{u}_{i,j} = v_i \cdot v_j^{-1}$.\pause
+		\item \textbf{Commit to $\mathbf{x}$:} $c = \mathbf{v}^\top\cdot\mathbf{x}$.\pause
+		\item \textbf{Open $f$:} $y = \sum_{i \in \mathbb{Z}_w}f_i\cdot x_i,\quad \mathbf{u}:=\sum_{i,j \in \mathbb{Z}_w, i\not=j}f_i\cdot x_i\cdot \mathbf{u}_{i,j}$.\pause
 		\item \textbf{Verify $f, y$:} $\mathbf{a}^\top\cdot\mathbf{u} = c\cdot \left(\sum_{j \in \mathbb{Z}_w}f_j\cdot v_j^{-1}\right) -y.$
 	\end{itemize}
 \end{frame}
