--- a/2022-941/section_new_lattice_assumptions.tex
+++ b/2022-941/section_new_lattice_assumptions.tex
@@ -20,7 +20,7 @@
 			\mathbf{A} \uniformly \mathcal{R}_q^{\eta\times \ell} \mod q,\\
 			\mathbf{t}\uniformly\mathcal{T}, \mathbf{v}\uniformly \left(\mathcal{R}_q^\times \right)^w\\
 			\forall g \in \mathcal{G}:\mathbf{u}_g \uniformly\mathcal{D}_{g, \mathbf{A}, \mathbf{t}, \mathbf{v}},\\
-			(s^\star, \mathbf{u}_g^{\star} \leftarrow \adversary(\mathbf{A}, \mathbf{t}, \left\{\mathbf{u}_\mathcal{G}\right\}, \mathbf{v}))
+			(s^\star, \mathbf{u}_g^{\star}) \leftarrow \adversary(\mathbf{A}, \mathbf{t}, \left\{\mathbf{u}_\mathcal{G}\right\}, \mathbf{v})
 		\end{split}
 		\right].\pause
 	\end{equation*}
